# cpp-opengl-engine

./: .gitignore  CMakeLists.txt  Camera.h  InputManager.h  Makefile  README.md  main.cpp
engineTester/: MainGameLoop.cpp  MainGameLoop.h
entities/: Camera.h  CameraInput.cpp  CameraInput.h  Entity.h  Light.h
models/: RawModel.h  TexturedModel.h
readmes/: CONTENTS.md  USAGE.md
renderEngine/: DisplayManager.h  EntityRenderer.cpp  EntityRenderer.h  Loader.cpp  Loader.h  MasterRenderer.h  ModelData.h  ObjLoader.cpp  ObjLoader.h  RawModel.h  RenderStyle.h  Renderer.h  Shader.h  TerrainRenderer.h  Vertex.h
shaders/: ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h  TerrainShader.cpp  TerrainShader.h  fragment_shader.glsl  terrain_fragment_shader.glsl  terrain_vertex_shader.glsl  vertex_shader.glsl
src/: main.cpp
src/BoundingBox/: BoundingBox.h  BoundingBoxIndex.cpp  BoundingBoxIndex.h  BoundingBoxMaster.cpp  BoundingBoxMaster.h  BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  BoundingBoxShader.cpp  BoundingBoxShader.h  RawBoundingBox.h
src/BoundingBox/BoundingBox/: FragmentShader.glsl  VertexShader.glsl
src/Collision/: AABB.cpp  AABB.h  BoundingRegion.cpp  BoundingRegion.h
src/EngineTester/: MainGameLoop.cpp  MainGameLoop.h
src/EngineTester/GUI/: MainGuiLoop.cpp  MainGuiLoop.h
src/EngineTester/Main/: MainGameLoop.cpp  MainGameLoop.h
src/Entities/: AssimpEntity.cpp  AssimpEntity.h  Camera.cpp  Camera.h  CameraInput.cpp  CameraInput.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h  Scene.h
src/FontMeshCreator/: Character.h  FontModel.h  GUIText.cpp  GUIText.h  Line.cpp  Line.h  TextMeshCreator.cpp  TextMeshCreator.h  TextMeshData.cpp  TextMeshData.h  Word.cpp  Word.h
src/FontRendering/: FontRenderer.cpp  FontRenderer.h  FontShader.cpp  FontShader.h  TextMaster.cpp  TextMaster.h
src/Guis/: Alpha.cpp  Alpha.h  Container.h  GuiComponent.cpp  GuiComponent.h  GuiRenderer.cpp  GuiRenderer.h  GuiShader.cpp  GuiShader.h  GuiTexture.cpp  GuiTexture.h  UiConstraints.cpp  UiConstraints.h  UiContainer.h  UiMaster.cpp  UiMaster.h
src/Guis/ColoredRect/: GuiColoredRect.cpp  GuiColoredRect.h
src/Guis/Components/: ButtonUi.cpp  ButtonUi.h
src/Guis/Constraints/: Tools.h  UiConstraint.cpp  UiConstraint.h  UiConstraints.cpp  UiConstraints.h  UiNormalizedConstraint.h  UiPercentConstraint.h  UiPixelConstraint.h
src/Guis/FontMeshCreator/: GUIText.cpp  GUIText.h  Line.cpp  TextMeshCreator.h  TextMeshData.cpp  Word.h
src/Guis/FontRendering/: FontRenderer.cpp  FontRenderer.h  FontShader.cpp  FontShader.h  TextMaster.h
src/Guis/Rect/: GuiRect.cpp  GuiRect.h  RectRenderer.cpp  RectRenderer.h  RectShader.h
src/Guis/Rect/Rendering/: RectRenderer.cpp  RectRenderer.h  RectShader.cpp  RectShader.h
src/Guis/Shaders/: FragmentShader.glsl  VertexShader.glsl
src/Guis/Text/: GUIText.cpp  GUIText.h
src/Guis/Text/FontMeshCreator/: Character.h  FontNames.h  GUIText.cpp  GUIText.h  Line.h  TextMeshCreator.cpp  TextMeshCreator.h  TextMeshData.cpp  TextMeshData.h  Word.h
src/Guis/Text/FontRendering/: FontRenderer.cpp  FontRenderer.h  FontShader.h  TextMaster.cpp  TextMaster.h
src/Guis/Text/Rendering/: FontRenderer.cpp  FontRenderer.h  FontShader.cpp  FontShader.h  TextMaster.cpp  TextMaster.h
src/Guis/Texture/: GuiRenderer.cpp  GuiRenderer.h  GuiShader.h  GuiTexture.cpp  GuiTexture.h
src/Guis/Texture/Rendering/: GuiRenderer.cpp  GuiRenderer.h  GuiShader.cpp  GuiShader.h
src/Guis/Texture/Shaders/: FragmentShader.glsl
src/Input/: InputMaster.cpp  InputMaster.h
src/Interaction/: InteractiveModel.cpp  InteractiveModel.h
src/Interfaces/: Clickable.h  Interactive.h  Moveable.h  Positionable.h  Renderable.h
src/Models/: RawBoundingBox.h  RawData.h  RawModel.h  TexturedModel.h
src/OpenGLWrapper/: OpenGLUtils.cpp  OpenGLUtils.h
src/RenderEngine/: AssimpEntityLoader.cpp  AssimpEntityLoader.h  AssimpEntityRenderer.cpp  AssimpEntityRenderer.h  AssimpMesh.h  AssimpMeshData.cpp  AssimpMeshData.h  AssimpModelLoader.h  BbData.h  BoundingBoxData.h  BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  DisplayManager.cpp  DisplayManager.h  EntityRenderer.cpp  EntityRenderer.h  FrameBuffers.cpp  FrameBuffers.h  Loader.cpp  Loader.h  MasterRenderer.cpp  MasterRenderer.h  MeshData.cpp  MeshData.h  ModelData.h  ObjLoader.cpp  ObjLoader.h  SceneLoader.cpp  SceneLoader.h  SceneRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h  Vertex.h
src/Resources/InProgress/Tree/: fluffy-tree.blend  tree.blend
src/Resources/Models/Stall/: stall.blend
src/Shaders/: AssimpStaticShader.cpp  AssimpStaticShader.h  BoundingBoxShader.h  ModelShader.cpp  ModelShader.h  ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h  TerrainShader.cpp  TerrainShader.h
src/Shaders/Assimp/: ModelShader.cpp  ModelShader.h
src/Shaders/BoundingBox/: FragmentShader.glsl
src/Shaders/Scene/: FragmentShader.glsl  VertexShader.glsl
src/Shaders/Static/: FragmentShader.glsl  VertexShader.glsl
src/Shaders/Terrain/: FragmentShader.glsl  VertexShader.glsl
src/Skybox/: FragmentShader.glsl  SkyboxRenderer.cpp  SkyboxRenderer.h  SkyboxShader.cpp  SkyboxShader.h
src/Terrain/: HeightMap.cpp  HeightMap.h  Terrain.cpp  Terrain.h
src/Textures/: ModelTexture.cpp  ModelTexture.h  TerrainTexture.h  TerrainTexturePack.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/Toolbox/: Color.cpp  Color.h  FileSystem.cpp  FileSystem.h  LighUtil.h  Maths.h  MousePicker.cpp  MousePicker.h  Noise.h  Picker.cpp  Picker.h  Screenshot.h  TerrainPicker.cpp  TerrainPicker.h  Utils.h
src/Toolbox/Logger/: ANSI.hpp  Log.h
src/Util/: ColorName.cpp  ColorName.h  ColorNames.h  Colors.cpp  Colors.h  CommonHeader.h  Debug.h  FileSystem.cpp  FileSystem.h  LightUtil.h  Utils.h
src/World/: Block.h  Chunk.cpp  Chunk.h  HashMap.h  Map.cpp  Map.h  World.cpp  World.h  WorldCommon.h
terrain/: Terrain.h
textures/: ModelTexture.h  Texture.cpp  Texture.h
toolbox/: Debug.h  FileSystem.cpp  FileSystem.h  Maths.h  Utils.h
(+3 files in other folders)
